ext/mvc/model/query/scanner.c
/* Generated by re2c 0.13.5 on Wed Apr 29 09:16:40 2015 */
/* #line 1 "scanner.re" */

/*
  +------------------------------------------------------------------------+
  | Phalcon Framework                                                      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2014 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>                      |
  |          Eduar Carvajal <eduar@phalconphp.com>                         |
  +------------------------------------------------------------------------+
*/

#include "php_phalcon.h"

#include "mvc/model/query/scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int phql_get_token(phql_scanner_state *s, phql_scanner_token *token) {

	char *q = YYCURSOR;
	int status = PHQL_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHQL_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
/* #line 40 "scanner.c" */
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,  48,  48,  48,  48,  48,  48,  48, 
				 48,  52,  52,  48,  48,  52,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 52,  48,  16,  48,  48,  48,  48,  32, 
				 48,  48,  48,  48,  48, 112,  48,  48, 
				248, 248, 248, 248, 248, 248, 248, 248, 
				248, 248,  48,  48,  48,  48,  48,  48, 
				 48, 120, 120, 120, 120, 120, 120, 120, 
				120, 120, 120, 120, 120, 120, 120, 120, 
				120, 120, 120, 120, 120, 120, 120, 120, 
				120, 120, 120,  48,   8,  48,  48, 120, 
				 48, 120, 120, 120, 120, 120, 120, 120, 
				120, 120, 120, 120, 120, 120, 120, 120, 
				120, 120, 120, 120, 120, 120, 120, 120, 
				120, 120, 120,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
			};

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy69;
			case '\t':
			case '\n':
			case '\r':
			case ' ':	goto yy67;
			case '!':	goto yy50;
			case '"':	goto yy29;
			case '%':	goto yy42;
			case '&':	goto yy61;
			case '\'':	goto yy30;
			case '(':	goto yy46;
			case ')':	goto yy48;
			case '*':	goto yy38;
			case '+':	goto yy34;
			case ',':	goto yy44;
			case '-':	goto yy36;
			case '.':	goto yy4;
			case '/':	goto yy40;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy2;
			case ':':	goto yy8;
			case '<':	goto yy52;
			case '=':	goto yy56;
			case '>':	goto yy54;
			case '?':	goto yy6;
			case '@':	goto yy58;
			case 'A':
			case 'a':	goto yy15;
			case 'B':
			case 'b':	goto yy20;
			case 'C':
			case 'c':	goto yy27;
			case 'D':
			case 'd':	goto yy13;
			case 'E':
			case 'K':
			case 'M':
			case 'P':
			case 'Q':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'e':
			case 'k':
			case 'm':
			case 'p':
			case 'q':
			case 'x':
			case 'y':
			case 'z':	goto yy32;
			case 'F':
			case 'f':	goto yy14;
			case 'G':
			case 'g':	goto yy21;
			case 'H':
			case 'h':	goto yy22;
			case 'I':
			case 'i':	goto yy16;
			case 'J':
			case 'j':	goto yy25;
			case 'L':
			case 'l':	goto yy23;
			case 'N':
			case 'n':	goto yy24;
			case 'O':
			case 'o':	goto yy19;
			case 'R':
			case 'r':	goto yy26;
			case 'S':
			case 's':	goto yy12;
			case 'T':
			case 't':	goto yy28;
			case 'U':
			case 'u':	goto yy10;
			case 'V':
			case 'v':	goto yy17;
			case 'W':
			case 'w':	goto yy18;
			case '[':	goto yy33;
			case '\\':	goto yy31;
			case '^':	goto yy65;
			case '|':	goto yy59;
			case '~':	goto yy63;
			default:	goto yy71;
			}
yy2:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '.') goto yy305;
			if (yych <= '/') goto yy3;
			if (yych <= '9') goto yy307;
yy3:
/* #line 41 "scanner.re" */
			{
			token->opcode = PHQL_T_INTEGER;
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			q = YYCURSOR;
			return 0;
		}
/* #line 189 "scanner.c" */
yy4:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '/') goto yy5;
			if (yych <= '9') goto yy302;
yy5:
/* #line 358 "scanner.re" */
			{
			token->opcode = PHQL_T_DOT;
			return 0;
		}
/* #line 200 "scanner.c" */
yy6:
			++YYCURSOR;
			if (yybm[0+(yych = *YYCURSOR)] & 128) {
				goto yy299;
			}
yy7:
/* #line 483 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_ERR;
			break;
		}
/* #line 212 "scanner.c" */
yy8:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yybm[0+yych] & 64) {
				goto yy295;
			}
yy9:
/* #line 363 "scanner.re" */
			{
			token->opcode = PHQL_T_COLON;
			return 0;
		}
/* #line 225 "scanner.c" */
yy10:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 'S') {
				if (yych == 'P') goto yy284;
				if (yych <= 'R') goto yy98;
				goto yy285;
			} else {
				if (yych <= 'p') {
					if (yych <= 'o') goto yy98;
					goto yy284;
				} else {
					if (yych == 's') goto yy285;
					goto yy98;
				}
			}
yy11:
/* #line 306 "scanner.re" */
			{
			token->opcode = PHQL_T_IDENTIFIER;
			if ((YYCURSOR - q) > 1) {
				if (q[0] == '\\') {
					token->value = estrndup(q + 1, YYCURSOR - q - 1);
					token->len = YYCURSOR - q - 1;
				} else {
					token->value = estrndup(q, YYCURSOR - q);
					token->len = YYCURSOR - q;
				}
			} else {
				token->value = estrndup(q, YYCURSOR - q);
				token->len = YYCURSOR - q;
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 260 "scanner.c" */
yy12:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy276;
			if (yych == 'e') goto yy276;
			goto yy98;
yy13:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy259;
				if (yych <= 'H') goto yy98;
				goto yy260;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy98;
					goto yy259;
				} else {
					if (yych == 'i') goto yy260;
					goto yy98;
				}
			}
yy14:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'O') {
					if (yych == 'A') goto yy243;
					if (yych <= 'N') goto yy98;
					goto yy244;
				} else {
					if (yych == 'R') goto yy245;
					if (yych <= 'T') goto yy98;
					goto yy246;
				}
			} else {
				if (yych <= 'o') {
					if (yych == 'a') goto yy243;
					if (yych <= 'n') goto yy98;
					goto yy244;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy98;
						goto yy245;
					} else {
						if (yych == 'u') goto yy246;
						goto yy98;
					}
				}
			}
yy15:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych <= 'L') {
					if (yych == 'G') goto yy226;
					if (yych <= 'K') goto yy98;
					goto yy227;
				} else {
					if (yych == 'N') goto yy228;
					if (yych <= 'R') goto yy98;
					goto yy229;
				}
			} else {
				if (yych <= 'l') {
					if (yych == 'g') goto yy226;
					if (yych <= 'k') goto yy98;
					goto yy227;
				} else {
					if (yych <= 'n') {
						if (yych <= 'm') goto yy98;
						goto yy228;
					} else {
						if (yych == 's') goto yy229;
						goto yy98;
					}
				}
			}
yy16:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych <= 'M') {
					if (yych == 'L') goto yy205;
					goto yy98;
				} else {
					if (yych <= 'N') goto yy206;
					if (yych <= 'R') goto yy98;
					goto yy208;
				}
			} else {
				if (yych <= 'm') {
					if (yych == 'l') goto yy205;
					goto yy98;
				} else {
					if (yych <= 'n') goto yy206;
					if (yych == 's') goto yy208;
					goto yy98;
				}
			}
yy17:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy199;
			if (yych == 'a') goto yy199;
			goto yy98;
yy18:
			yych = *++YYCURSOR;
			if (yych == 'H') goto yy194;
			if (yych == 'h') goto yy194;
			goto yy98;
yy19:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'N') {
					if (yych == 'F') goto yy175;
					if (yych <= 'M') goto yy98;
					goto yy176;
				} else {
					if (yych == 'R') goto yy178;
					if (yych <= 'T') goto yy98;
					goto yy180;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy175;
					if (yych <= 'm') goto yy98;
					goto yy176;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy98;
						goto yy178;
					} else {
						if (yych == 'u') goto yy180;
						goto yy98;
					}
				}
			}
yy20:
			yych = *++YYCURSOR;
			if (yych <= 'Y') {
				if (yych == 'E') goto yy166;
				if (yych <= 'X') goto yy98;
				goto yy167;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy98;
					goto yy166;
				} else {
					if (yych == 'y') goto yy167;
					goto yy98;
				}
			}
yy21:
			yych = *++YYCURSOR;
			if (yych == 'R') goto yy161;
			if (yych == 'r') goto yy161;
			goto yy98;
yy22:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy155;
			if (yych == 'a') goto yy155;
			goto yy98;
yy23:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy143;
				if (yych <= 'H') goto yy98;
				goto yy144;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy98;
					goto yy143;
				} else {
					if (yych == 'i') goto yy144;
					goto yy98;
				}
			}
yy24:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'O') goto yy136;
				if (yych <= 'T') goto yy98;
				goto yy137;
			} else {
				if (yych <= 'o') {
					if (yych <= 'n') goto yy98;
					goto yy136;
				} else {
					if (yych == 'u') goto yy137;
					goto yy98;
				}
			}
yy25:
			yych = *++YYCURSOR;
			if (yych == 'O') goto yy132;
			if (yych == 'o') goto yy132;
			goto yy98;
yy26:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy127;
			if (yych == 'i') goto yy127;
			goto yy98;
yy27:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych <= 'N') {
					if (yych == 'A') goto yy111;
					goto yy98;
				} else {
					if (yych <= 'O') goto yy112;
					if (yych <= 'Q') goto yy98;
					goto yy113;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'a') goto yy111;
					goto yy98;
				} else {
					if (yych <= 'o') goto yy112;
					if (yych == 'r') goto yy113;
					goto yy98;
				}
			}
yy28:
			yych = *++YYCURSOR;
			if (yych == 'R') goto yy107;
			if (yych == 'r') goto yy107;
			goto yy98;
yy29:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy7;
			goto yy105;
yy30:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy7;
			goto yy100;
yy31:
			yych = *++YYCURSOR;
			if (yych <= '^') {
				if (yych <= '@') goto yy7;
				if (yych <= 'Z') goto yy97;
				goto yy7;
			} else {
				if (yych == '`') goto yy7;
				if (yych <= 'z') goto yy97;
				goto yy7;
			}
yy32:
			yych = *++YYCURSOR;
			goto yy98;
yy33:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '\\') {
				if (yych <= '@') goto yy7;
				if (yych == '[') goto yy7;
				goto yy92;
			} else {
				if (yych <= '_') {
					if (yych <= '^') goto yy7;
					goto yy92;
				} else {
					if (yych <= '`') goto yy7;
					if (yych <= 'z') goto yy92;
					goto yy7;
				}
			}
yy34:
			++YYCURSOR;
/* #line 333 "scanner.re" */
			{
			token->opcode = PHQL_T_ADD;
			return 0;
		}
/* #line 532 "scanner.c" */
yy36:
			++YYCURSOR;
/* #line 338 "scanner.re" */
			{
			token->opcode = PHQL_T_SUB;
			return 0;
		}
/* #line 540 "scanner.c" */
yy38:
			++YYCURSOR;
/* #line 343 "scanner.re" */
			{
			token->opcode = PHQL_T_MUL;
			return 0;
		}
/* #line 548 "scanner.c" */
yy40:
			++YYCURSOR;
/* #line 348 "scanner.re" */
			{
			token->opcode = PHQL_T_DIV;
			return 0;
		}
/* #line 556 "scanner.c" */
yy42:
			++YYCURSOR;
/* #line 353 "scanner.re" */
			{
			token->opcode = PHQL_T_MOD;
			return 0;
		}
/* #line 564 "scanner.c" */
yy44:
			++YYCURSOR;
/* #line 368 "scanner.re" */
			{
			token->opcode = PHQL_T_COMMA;
			return 0;
		}
/* #line 572 "scanner.c" */
yy46:
			++YYCURSOR;
/* #line 373 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_OPEN;
			return 0;
		}
/* #line 580 "scanner.c" */
yy48:
			++YYCURSOR;
/* #line 378 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_CLOSE;
			return 0;
		}
/* #line 588 "scanner.c" */
yy50:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '!') goto yy88;
			if (yych == '=') goto yy90;
/* #line 448 "scanner.re" */
			{
			token->opcode = PHQL_T_NOT;
			return 0;
		}
/* #line 598 "scanner.c" */
yy52:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '<') goto yy53;
			if (yych <= '=') goto yy84;
			if (yych <= '>') goto yy86;
yy53:
/* #line 403 "scanner.re" */
			{
			token->opcode = PHQL_T_LESS;
			return 0;
		}
/* #line 610 "scanner.c" */
yy54:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy82;
/* #line 408 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATER;
			return 0;
		}
/* #line 619 "scanner.c" */
yy56:
			++YYCURSOR;
/* #line 413 "scanner.re" */
			{
			token->opcode = PHQL_T_EQUALS;
			return 0;
		}
/* #line 627 "scanner.c" */
yy58:
			yych = *++YYCURSOR;
			if (yych == '>') goto yy78;
			if (yych == '@') goto yy80;
			goto yy7;
yy59:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '|') goto yy76;
/* #line 468 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_OR;
			return 0;
		}
/* #line 641 "scanner.c" */
yy61:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '&') goto yy74;
/* #line 463 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_AND;
			return 0;
		}
/* #line 650 "scanner.c" */
yy63:
			++YYCURSOR;
/* #line 453 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_NOT;
			return 0;
		}
/* #line 658 "scanner.c" */
yy65:
			++YYCURSOR;
/* #line 458 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_XOR;
			return 0;
		}
/* #line 666 "scanner.c" */
yy67:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy73;
yy68:
/* #line 473 "scanner.re" */
			{
			token->opcode = PHQL_T_IGNORE;
			return 0;
		}
/* #line 677 "scanner.c" */
yy69:
			++YYCURSOR;
/* #line 478 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_EOF;
			break;
		}
/* #line 685 "scanner.c" */
yy71:
			yych = *++YYCURSOR;
			goto yy7;
yy72:
			++YYCURSOR;
			yych = *YYCURSOR;
yy73:
			if (yybm[0+yych] & 4) {
				goto yy72;
			}
			goto yy68;
yy74:
			++YYCURSOR;
/* #line 428 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_AND;
			return 0;
		}
/* #line 704 "scanner.c" */
yy76:
			++YYCURSOR;
/* #line 423 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_OR;
			return 0;
		}
/* #line 712 "scanner.c" */
yy78:
			++YYCURSOR;
/* #line 438 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_CONTAINS_ANOTHER;
			return 0;
		}
/* #line 720 "scanner.c" */
yy80:
			++YYCURSOR;
/* #line 418 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_MATCHES;
			return 0;
		}
/* #line 728 "scanner.c" */
yy82:
			++YYCURSOR;
/* #line 398 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATEREQUAL;
			return 0;
		}
/* #line 736 "scanner.c" */
yy84:
			++YYCURSOR;
/* #line 393 "scanner.re" */
			{
			token->opcode = PHQL_T_LESSEQUAL;
			return 0;
		}
/* #line 744 "scanner.c" */
yy86:
			++YYCURSOR;
/* #line 388 "scanner.re" */
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
/* #line 752 "scanner.c" */
yy88:
			++YYCURSOR;
/* #line 433 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_NEGATE;
			return 0;
		}
/* #line 760 "scanner.c" */
yy90:
			++YYCURSOR;
/* #line 383 "scanner.re" */
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
/* #line 768 "scanner.c" */
yy92:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 8) {
				goto yy92;
			}
			if (yych == ']') goto yy95;
yy94:
			YYCURSOR = YYMARKER;
			if (yyaccept <= 0) {
				goto yy9;
			} else {
				goto yy7;
			}
yy95:
			++YYCURSOR;
/* #line 325 "scanner.re" */
			{
			token->opcode = PHQL_T_IDENTIFIER;
			token->value = estrndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			q = YYCURSOR;
			return 0;
		}
/* #line 793 "scanner.c" */
yy97:
			++YYCURSOR;
			yych = *YYCURSOR;
yy98:
			if (yych <= '[') {
				if (yych <= '9') {
					if (yych <= '/') goto yy11;
					goto yy97;
				} else {
					if (yych <= '@') goto yy11;
					if (yych <= 'Z') goto yy97;
					goto yy11;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych <= '^') goto yy11;
					goto yy97;
				} else {
					if (yych <= '`') goto yy11;
					if (yych <= 'z') goto yy97;
					goto yy11;
				}
			}
yy99:
			++YYCURSOR;
			yych = *YYCURSOR;
yy100:
			if (yybm[0+yych] & 16) {
				goto yy99;
			}
			if (yych <= 0x00) goto yy94;
			if (yych <= '[') goto yy102;
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych == '\n') goto yy94;
			goto yy99;
yy102:
			++YYCURSOR;
/* #line 297 "scanner.re" */
			{
			token->opcode = PHQL_T_STRING;
			token->value = estrndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			q = YYCURSOR;
			return 0;
		}
/* #line 841 "scanner.c" */
yy104:
			++YYCURSOR;
			yych = *YYCURSOR;
yy105:
			if (yybm[0+yych] & 32) {
				goto yy104;
			}
			if (yych <= 0x00) goto yy94;
			if (yych <= '[') goto yy102;
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych == '\n') goto yy94;
			goto yy104;
yy107:
			yych = *++YYCURSOR;
			if (yych == 'U') goto yy108;
			if (yych != 'u') goto yy98;
yy108:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy109;
			if (yych != 'e') goto yy98;
yy109:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '9') {
					if (yych >= '0') goto yy97;
				} else {
					if (yych <= '@') goto yy110;
					if (yych <= 'Z') goto yy97;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych >= '_') goto yy97;
				} else {
					if (yych <= '`') goto yy110;
					if (yych <= 'z') goto yy97;
				}
			}
yy110:
/* #line 281 "scanner.re" */
			{
			token->opcode = PHQL_T_TRUE;
			return 0;
		}
/* #line 887 "scanner.c" */
yy111:
			yych = *++YYCURSOR;
			if (yych == 'S') goto yy124;
			if (yych == 's') goto yy124;
			goto yy98;
yy112:
			yych = *++YYCURSOR;
			if (yych == 'N') goto yy118;
			if (yych == 'n') goto yy118;
			goto yy98;
yy113:
			yych = *++YYCURSOR;
			if (yych == 'O') goto yy114;
			if (yych != 'o') goto yy98;
yy114:
			yych = *++YYCURSOR;
			if (yych == 'S') goto yy115;
			if (yych != 's') goto yy98;
yy115:
			yych = *++YYCURSOR;
			if (yych == 'S') goto yy116;
			if (yych != 's') goto yy98;
yy116:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '9') {
					if (yych >= '0') goto yy97;
				} else {
					if (yych <= '@') goto yy117;
					if (yych <= 'Z') goto yy97;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych >= '_') goto yy97;
				} else {
					if (yych <= '`') goto yy117;
					if (yych <= 'z') goto yy97;
				}
			}
yy117:
/* #line 226 "scanner.re" */
			{
			token->opcode = PHQL_T_CROSS;
			return 0;
		}
/* #line 934 "scanner.c" */
yy118:
			yych = *++YYCURSOR;
			if (yych == 'V') goto yy119;
			if (yych != 'v') goto yy98;
yy119:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy120;
			if (yych != 'e') goto yy98;
yy120:
			yych = *++YYCURSOR;
			if (yych == 'R') goto yy121;
			if (yych != 'r') goto yy98;
yy121:
			yych = *++YYCURSOR;
			if (yych == 'T') goto yy122;
			if (yych != 't') goto yy98;
yy122:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '9') {
					if (yych >= '0') goto yy97;
				} else {
					if (yych <= '@') goto yy123;
					if (yych <= 'Z') goto yy97;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych >= '_') goto yy97;
				} else {
					if (yych <= '`') goto yy123;
					if (yych <= 'z') goto yy97;
				}
			}
yy123:
/* #line 271 "scanner.re" */
			{
			token->opcode = PHQL_T_CONVERT;
			return 0;
		}
/* #line 975 "scanner.c" */
yy124:
			yych = *++YYCURSOR;
			if (yych == 'T') goto yy125;
			if (yych != 't') goto yy98;
yy125:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '9') {
					if (yych >= '0') goto yy97;
				} else {
					if (yych <= '@') goto yy126;
					if (yych <= 'Z') goto yy97;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych >= '_') goto yy97;
				} else {
					if (yych <= '`') goto yy126;
					if (yych <= 'z') goto yy97;
				}
			}
yy126:
/* #line 266 "scanner.re" */
			{
			token->opcode = PHQL_T_CAST;
			return 0;
		}
/* #line 1004 "scanner.c" */
yy127:
			yych = *++YYCURSOR;
			if (yych == 'G') goto yy128;
			if (yych != 'g') goto yy98;
yy128:
			yych = *++YYCURSOR;
			if (yych == 'H') goto yy129;
			if (yych != 'h') goto yy98;
yy129:
			yych = *++YYCURSOR;
			if (yych == 'T') goto yy130;
			if (yych != 't') goto yy98;
yy130:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '9') {
					if (yych >= '0') goto yy97;
				} else {
					if (yych <= '@') goto yy131;
					if (yych <= 'Z') goto yy97;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych >= '_') goto yy97;
				} else {
					if (yych <= '`') goto yy131;
					if (yych <= 'z') goto yy97;
				}
			}
yy131:
/* #line 221 "scanner.re" */
			{
			token->opcode = PHQL_T_RIGHT;
			return 0;
		}
/* #line 1041 "scanner.c" */
yy132:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy133;
			if (yych != 'i') goto yy98;
yy133:
			yych = *++YYCURSOR;
			if (yych == 'N') goto yy134;
			if (yych != 'n') goto yy98;
yy134:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '9') {
					if (yych >= '0') goto yy97;
				} else {
					if (yych <= '@') goto yy135;
					if (yych <= 'Z') goto yy97;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy97;
					if (yych >= '_') goto yy97;
				} else {
					if (yych <= '`') goto yy135;
					if (yych <= 'z') goto yy97;
				}
			}
yy135:
/* #line 206 "scanner.re" */
			{
			token->opcode = PHQL_T_JOIN;
			return 0;
		}
/* #line 1074 "scanner.c" */
yy136:
			yych = *++YYCURSOR;
			if (yych == 'T') goto yy141;
